# rebalancer

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
migrations/versions/: 5497fec79949_initial.py  87bdb90f634a_add_portfolio_analyses_table.py
models/: __init__.py  classification.py  holding.py  portfolio_analysis.py  snapshot.py  target.py
parsers/: fidelity.py  schwab.py
prompts/: REGENERATE_ETF_MAP.md
services/: analyzer.py  classifications_config.py  classifier.py  etf_classifications.json  prices.py  rebalancer.py
static/css/: style.css
static/js/: app.js
templates/: index.html
